--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "plugin-template",
-    "version": "0.0.1",
-    "description": "Plugin Template.",
+    "name": "file-title-updater",
+    "version": "0.1.0",
+    "description": "Synchronize titles between filename, frontmatter, and first heading in Obsidian notes",
     "main": "main.js",
     "scripts": {
     "dev": "node esbuild.config.mjs",
@@ -15,7 +15,11 @@
   },
     "version-tag-prefix": "",
     "keywords": [
-        "obsidian"
+        "obsidian",
+        "obsidian-plugin",
+        "title",
+        "frontmatter",
+        "heading"
     ],
     "author": "wenlzhang",
     "devDependencies": {
